Backport release changes from master branch